--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,13 @@
-# 阿里百炼 API Key (从 https://bailian.console.aliyun.com 获取)
-BAILIAN_API_KEY=sk-xxxx
+# 阿里百炼 API (Coding Plan 专属)
+BAILIAN_API_KEY=sk-sp-xxxx
+BAILIAN_BASE_URL=https://coding.dashscope.aliyuncs.com/apps/anthropic
+BAILIAN_MODEL=qwen3-coder-plus
+BAILIAN_TIMEOUT=60
 
-# 百炼模型 (默认使用 qwen-plus)
-BAILIAN_MODEL=qwen-plus
+# Crunchbase API (可选)
+CRUNCHBASE_API_KEY=your_api_key
 
-# 飞书配置 (可选，用于推送通知)
+# 飞书通知 (可选)
 FEISHU_APP_ID=cli_xxx
 FEISHU_APP_SECRET=xxx
 FEISHU_USER_ID=ou_xxx
